# NvPipe

./: CMakeLists.txt  FindNvPipe.cmake  LICENSE  README.md  conanfile.py
examples/: concurrent.cpp  deviceInfo.cpp  egl.cpp  file.cpp  lossless.cpp  memory.cpp
include/NvPipe/NvCodec/NvEncoder/: NvEncoderCuda.h  NvEncoderD3D11.h  NvEncoderD3D9.h  NvEncoderGL.h  NvEncoderOutputInVidMemCuda.h  NvEncoderOutputInVidMemD3D11.h
include/NvPipe/Utils/: DeviceInfo.h  FFmpegDemuxer.h  FFmpegStreamer.h  NvCodecUtils.h  NvEncoderCLIOptions.h
src/: NvPipe.cu  NvPipe.h.in
src/NvCodec/: README.md
src/NvCodec/NvDecoder/: NvDecoder.cpp
src/NvCodec/NvEncoder/: NvEncoder.cpp  NvEncoderCuda.cpp  NvEncoderD3D11.cpp  NvEncoderD3D9.cpp  NvEncoderGL.cpp  NvEncoderOutputInVidMemCuda.cpp  NvEncoderOutputInVidMemD3D11.cpp
src/Utils/: DeviceInfo.cpp  Resize.cu
src/Video_Codec_SDK_9.0.20/Samples/AppDecode/AppDec/: AppDec.cpp  AppDec.vcxproj  AppDec.vcxproj.filters
src/Video_Codec_SDK_9.0.20/Samples/AppDecode/AppDecGL/: AppDecGL.cpp
src/Video_Codec_SDK_9.0.20/Samples/AppDecode/AppDecImageProvider/: AppDecImageProvider.cpp
src/Video_Codec_SDK_9.0.20/Samples/NvCodec/NvDecoder/: NvDecoder.cpp
tests/: CMakeLists.txt  test_decode.cpp
